feat(admin): update brand, category logic
